--- a/survey/LSST.conf
+++ b/survey/LSST.conf
@@ -64,9 +64,9 @@ siteConf = system/SiteCP.conf
 #        If missing, then do not process Weak Lensing proposal
 weakLensConf = survey/GalacticPlaneProp.conf
 weakLensConf = survey/SouthCelestialPole.conf
+weakLensConf = survey/UniversalWeak.conf
 
 #        New Weak Lensing as Transient with subsequences for each filter.
-WLpropConf = survey/Universal.conf
 WLpropConf = survey/NorthEclipticSpur.conf
 WLpropConf = survey/DDcosmology.conf
 
