Correcting Restart parameters in Universal.

--- a/survey/Universal.conf
+++ b/survey/Universal.conf
@@ -20,11 +20,11 @@ MaxNumberActiveSequences = 10000
                                                                                           
 #   Indicates incomplete sequences may be restarted if terminated early.
 #       Default = False
-RestartLostSequences = False
+RestartLostSequences = True
                                                                                           
 #   Indicates successfully completed sequences may be restarted on completion.
 #       Default = False
-RestartCompleteSequences = False
+RestartCompleteSequences = True
                                                                                           
 # Configuration for each filter-subsequence
 #MasterSubSequence = r
