Initial commit of NEO, Run 2 config.

--- a/survey/NorthEclipticSpur.conf
+++ b/survey/NorthEclipticSpur.conf
@@ -22,7 +22,7 @@ RestartLostSequences = False
                                                                                           
 #   Indicates successfully completed sequences may be restarted on completion.
 #       Default = False
-RestartCompleteSequences = False
+RestartCompleteSequences = True
                                                                                           
 # Configuration for each filter-subsequence
 #MasterSubSequence = r
@@ -58,8 +58,8 @@ RestartCompleteSequences = False
                                                                                                           
 SubSeqName      = g
 SubSeqFilters   = g
-SubSeqExposures = 1
-SubSeqEvents 	= 40
+SubSeqExposures = 2
+SubSeqEvents 	= 136
 SubSeqMaxMissed = 0
 SubSeqInterval  = 30*60
 SubSeqWindowStart       = -0.5
@@ -68,8 +68,8 @@ SubSeqWindowEnd         =  1.0
 
 SubSeqName      = r
 SubSeqFilters   = r
-SubSeqExposures = 1
-SubSeqEvents	= 92
+SubSeqExposures = 2
+SubSeqEvents	= 314
 SubSeqMaxMissed = 0
 SubSeqInterval  = 30*60
 SubSeqWindowStart       = -0.5
@@ -78,8 +78,8 @@ SubSeqWindowEnd         =  1.0
 
 SubSeqName      = i
 SubSeqFilters   = i
-SubSeqExposures = 1
-SubSeqEvents	= 92
+SubSeqExposures = 2
+SubSeqEvents	= 314
 SubSeqMaxMissed = 0
 SubSeqInterval  = 30*60
 SubSeqWindowStart       = -0.5
@@ -88,8 +88,8 @@ SubSeqWindowEnd         =  1.0
                                                                                                       
 SubSeqName      = z
 SubSeqFilters   = z
-SubSeqExposures = 1
-SubSeqEvents	= 80
+SubSeqExposures = 2
+SubSeqEvents	= 273
 SubSeqMaxMissed = 0
 SubSeqInterval  = 30*60
 SubSeqWindowStart       = -0.5
