Initial commit of NEO, Run 1 config.

--- a/survey/DDcosmology.conf
+++ b/survey/DDcosmology.conf
@@ -44,7 +44,6 @@ MasterSubSequence = main
 #   SubSeqWindowEnd  = Time at which event is abandoned. No default.
 SubSeqName     		= main
 SubSeqFilters		= r,g,i,z,y 
-#SubSeqExposures	= 40,20,40,52,40
 SubSeqExposures		= 20,10,20,26,20
 SubSeqEvents    	= 27
 SubSeqMaxMissed		= 0
@@ -55,7 +54,6 @@ SubSeqWindowEnd		= 0.70
 
 SubSeqName              = u-band
 SubSeqFilters           = u
-#SubSeqExposures         = 40
 SubSeqExposures         = 20
 SubSeqEvents            = 7
 SubSeqMaxMissed         = 0
@@ -63,7 +61,7 @@ SubSeqInterval          = 1*24*60*60
 SubSeqWindowStart       =-0.20
 SubSeqWindowMax         = 0.50
 SubSeqWindowEnd         = 0.70
-#
+
 #SubSeqName              = last
 #SubSeqFilters           = g
 #SubSeqExposures         = 10
@@ -153,8 +151,8 @@ minTransparency = .7
 
 #   Exposure time in seconds per visit
 #       Units: seconds   Format: float   Default: 30.0
-ExposureTime = 34.0      # 2 15-secs. exposures, 1 2-secs. readout, 2-secs. shutter time
-#ExposureTime = 570.     # composite region for 19 fov hexagons
+# 2 15-secs. exposures, 1 2-secs. readout, 2-secs. shutter time
+ExposureTime = 34.0
 
 # MM - NOT YET IMPLEMENTED  11/03/05
 #  Hard-coded in AstronomicalSky.py to -18.0 degrees
@@ -221,7 +219,7 @@ AcceptConsecutiveObs = True
 ########################################################################
 # NOTE: DO NOT use spaces between these values or you will break config!
 ########################################################################
-#userRegion = 0.0,-34.0, 4.0
+
 userRegion = 0.01,-45.5,0.2
 userRegion = 34.39,-5.1,0.2
 userRegion = 53.0,-27.34,0.2
