--- a/survey/GalacticPlaneProp.conf
+++ b/survey/GalacticPlaneProp.conf
@@ -77,9 +77,10 @@ MaxNeedAfterOverflow = 0.0
 # To disable this feature these are the values for both parameters.
 # ProgressToStartBoost = 1.00
 # MaxBoostToComplete   = 0.00
-ProgressToStartBoost = 1.00 # after 70% progress
-MaxBoostToComplete   = 0.00 # double rank near the end compared to a 
-                            # non-observed field-filter
+ # after 70% progress
+ProgressToStartBoost = 1.00
+# double rank near the end compared to a non-observed field-filter
+MaxBoostToComplete   = 0.00 
 
 # Galactic plane exclusion zone
 #       During a night, the EXCLUDED fields are bracketted by
@@ -119,13 +120,12 @@ minTransparency = 0.7
 
 #   Exposure time in seconds per visit
 #       Default  = 30.
-ExposureTime = 34.0      # 2 15-secs. exposures, 1 2-secs. readout, 2-secs. shutter time
-#ExposureTime = 570.     # composite region for 19 fov hexagons
+# 2 15-secs. exposures, 1 2-secs. readout, 2-secs. shutter time
+ExposureTime = 34.0
 
 #   Boundary when TwilightObserving begins/ends
 #       Units = degrees Format = float; Default is -12. = nautical
 TwilightBoundary = -12.
-
 
 # -----------------------------------------------------------------------
 #                   Target Ranking Parameters
@@ -157,22 +157,6 @@ AcceptConsecutiveObs = False
 # duration (secs since start of simulation).
 #StartTime =
 #StopTime = 
-
-#====================================================================
-#   Priority Ranking Scheme across all Proposals
-#
-#   All proposals use the same ranking scale of values [0.0 : 1.0] .
-#       Rank 0.0  indicates that, in the current context of the proposal,
-#           a Field should not be observed.
-#       Rank 0.1 is a 'stand-by' rank indicating that the Field is ready to
-#           be observed (butthere is no urgency).
-#       Rank 0.5 indicates increasing urgency to observe the Field due to
-#           the Proposal's scheduling requirements. Few Fields at any moment
-#           should have such a high priority.
-#       Rank 1.0 indicates urgent need to observe the Field.  Failure to
-#           observe immediately will cause the current sequence to abort.
-#====================================================================
-
 
 # ----------------------------------------------------------------------
 #                       Field Selection Parameters
