--- a/system/SiteCP.conf
+++ b/system/SiteCP.conf
@@ -1,53 +1,55 @@
 ######################################################################
-########### Configuration for   Cerro Pachon   #######################
+########### Configuration for Cerro Pachon     #######################
 ######################################################################
 
 #       Jan 1 of the year seeing data was collected
 #       Units = MJD;    Format = float; Default == 2022-1-1
-seeingEpoch = 59580  # Cerro Pachon - MJD(Jan 1, 2022)
+#       Cerro Pachon - MJD(Jan 1, 2022)
+seeingEpoch = 59580
 
 #       Telescope site's  Latitude
 #       Units = degree; Format = float, Negative implies South
-#       Default site is CTIO.
-#latitude = -29.666667      # Cerro Pachon
-latitude =  -30.2444        # OSS-REQ-0008
+#       Default site is Cerro Pachon.
+#       LSE-30, OSS-REQ-0008
+latitude =  -30.2444
 
 #       Telescope site's Longitude
 #       Units = degree; Format = float, Negative implies West
-#       Default site is CTIO.
-#longitude = -70.59          # Cerro Pachon
-longitude = -70.7494        # OSS-REQ-0008
+#       Default site is Cerro Pachon.
+#       LSE-30, OSS-REQ-0008
+longitude = -70.7494
 
 #       Telescope site's Elevation
 #       Units = meters above sea level; Format = float
-#       Default site is CTIO.
-#height = 2737.              # Cerro Pachon
-height = 2650.              # OSS-REQ-0008
+#       Default site is Cerro Pachon.
+#       LSE-30, OSS-REQ-0008
+height = 2650.
 
 #       Site's atmospheric pressure
 #       Units = millibar; Format = float  Default = 1010.
-pressure = 1010.         # Cerro Pachon
+#       Cerro Pachon
+pressure = 1010.
 
 #       Site's atmospheric temperature
 #       Units = degrees C; Format = float  Default = 12.
-temperature = 12.         # Cerro Pachon
+#       Cerro Pachon
+temperature = 12.
 
 #       Site's relative humidity
 #       Units = percent; Format = float  Default = 0.
-relativeHumidity = 0.         # CerroPachon
+#       Cerro Pachon
+relativeHumidity = 0.
 
 #       Weather data's seeing fudge factor applied to all seeing values
 #       Modifies all seeing data and to moderate "seeing too good to be true"
 #           sanity test
 #       runSeeing = weatherSeeing * weatherSeeingFudge * telescopeEffectsFudge
 #       Units = unitless, Format = float, default = 1.0
-weatherSeeingFudge = 1.0    # Cerro Pachon
+#       Cerro Pachon
+weatherSeeingFudge = 1.0
 
 #       Site Specific Database Table names
 #       Format =  string
 seeingTbl = Seeing
-#cloudTbl = CloudPachon
-#cloudTbl = Cloud2000Tololo
-#cloudTbl = Cloud3yrTololo
 cloudTbl = Cloud
 
