Cleaning up configuration files.
* Cleaning up common content files.
* Cleaning up Filters config file.
* Cleaning up LSST config file.
* Cleaning up Deep Drilling Cosmology proposal config file.
* Cleaning up Galactic Plane proposal config file.
* Cleaning up South Celestial Pole proposal config file.
* Cleaning up North Ecliptic Spur proposal config file.
* Cleaning up Universal proposal config file.

--- a/survey/Universal.conf
+++ b/survey/Universal.conf
@@ -4,7 +4,6 @@ ScienceType = WFD
 # Number of grouped visits. If commented out, the default is pairs (2)
 NumGroupedVisits = 4
 
-
 # -----------------------------------------------------------------------
 #                   Event Sequencing Parameters
 # -----------------------------------------------------------------------
@@ -52,12 +51,7 @@ RestartCompleteSequences = True
 SubSeqName      = u
 SubSeqFilters   = u
 SubSeqExposures = 1
-#SubSeqEvents    = 6
-#SubSeqEvents    = 21
-#SubSeqEvents    = 70
 SubSeqEvents	= 75
-#SubSeqEvents    = 56
-#SubSeqEvents    = 28
 SubSeqMaxMissed = 0
 SubSeqInterval  = 0
 SubSeqWindowStart       = 0
@@ -67,11 +61,7 @@ SubSeqWindowEnd         = 0
 SubSeqName      = g
 SubSeqFilters   = g
 SubSeqExposures = 1
-#SubSeqEvents    = 8
-#SubSeqEvents    = 30
-#SubSeqEvents    = 100
 SubSeqEvents	= 105
-#SubSeqEvents    = 80
 SubSeqMaxMissed = 0
 SubSeqInterval  = 30*60
 SubSeqWindowStart       = -0.5
@@ -81,11 +71,7 @@ SubSeqWindowEnd         =  1.0
 SubSeqName      = r
 SubSeqFilters   = r
 SubSeqExposures = 1
-#SubSeqEvents    = 19
-#SubSeqEvents    = 69
-#SubSeqEvents    = 230
 SubSeqEvents	= 240
-#SubSeqEvents    = 184
 SubSeqMaxMissed = 0
 SubSeqInterval  = 30*60
 SubSeqWindowStart       = -0.5
@@ -95,11 +81,7 @@ SubSeqWindowEnd         =  1.0
 SubSeqName      = i
 SubSeqFilters   = i
 SubSeqExposures = 1
-#SubSeqEvents    = 19
-#SubSeqEvents    = 69
-#SubSeqEvents    = 230
 SubSeqEvents	= 240
-#SubSeqEvents    = 184
 SubSeqMaxMissed = 0
 SubSeqInterval  = 30*60
 SubSeqWindowStart       = -0.5
@@ -109,11 +91,7 @@ SubSeqWindowEnd         =  1.0
 SubSeqName      = z
 SubSeqFilters   = z
 SubSeqExposures = 1
-#SubSeqEvents    = 16
-#SubSeqEvents    = 60
-#SubSeqEvents    = 200
 SubSeqEvents    = 210
-#SubSeqEvents    = 160
 SubSeqMaxMissed = 0
 SubSeqInterval  = 30*60
 SubSeqWindowStart       = -0.5
@@ -123,11 +101,7 @@ SubSeqWindowEnd         =  1.0
 SubSeqName      = y
 SubSeqFilters   = y
 SubSeqExposures = 1
-#SubSeqEvents    = 16
-#SubSeqEvents    = 60
-#SubSeqEvents    = 200
 SubSeqEvents	= 210
-#SubSeqEvents    = 160
 SubSeqMaxMissed = 0
 SubSeqInterval  = 0
 SubSeqWindowStart       = 0
@@ -150,9 +124,10 @@ OverflowLevel = 0.0
 # To disable this feature these are the values for both parameters.
 # ProgressToStartBoost = 1.00
 # MaxBoostToComplete   = 0.00
-ProgressToStartBoost = 0.90 # after 70% progress
-MaxBoostToComplete   = 10.00 # double rank near the end compared to a
-                            # non-observed field-filter
+# after 70% progress
+ProgressToStartBoost = 0.90
+# double rank near the end compared to a non-observed field-filter
+MaxBoostToComplete   = 10.00
 
 # Galactic plane exclusion zone
 #       During a night, the EXCLUDED fields are bracketted by
@@ -161,9 +136,6 @@ MaxBoostToComplete   = 10.00 # double rank near the end compared to a
 #       defaults: +/- 25. deg in latitude at 0 deg longitude going to
 #               +/- 5. deg in latitude at 180. deg longitude.
 #       Units = degree; Format = float; Default: taperL=5, taperB=180 peakL=25
-#taperL = 0.1
-#taperB = 90.
-#peakL = 10.
 taperL = 0.0
 taperB = 0.0
 peakL = 0.0
@@ -177,8 +149,7 @@ deltaLST = 60.0
 #   Min/Max Declination of allowable observations
 #       Units = degree; Format = float; Default is 80.
 maxReach = 90.0
-                                                                                             
-                                                                                          
+
 #   Limits in degrees for the range of the sky to build
 #       the list of new targets every night.
 #       Default = 0.0 for both
@@ -245,8 +216,8 @@ minTransparency = .7
                                                                                              
 #   Exposure time in seconds per visit
 #       Default  = 30.
-ExposureTime = 34.0      # 2 15-secs. exposures, 1 2-secs. readout, 2-secs. shutter time
-#ExposureTime = 570.     # composite region for 19 fov hexagons
+# 2 15-secs. exposures, 1 2-secs. readout, 2-secs. shutter time
+ExposureTime = 34.0
                                                                                              
 #   Boundary when TwilightObserving begins/ends
 #       Units = degrees Format = float; Default is -12. = nautical
@@ -306,8 +277,8 @@ AcceptConsecutiveObs = False
 #                            diameter width is centered.
 #       Units: deg,deg,deg Format: float, float, float
 #       Default: none; do not include
-
 # fields/userRegions_design.txt - design fields - 18,000 sq deg
+
 userRegion = 240.05,-62.02,0.03
 userRegion = 119.94,-62.02,0.03
 userRegion = 335.95,-62.02,0.03
