--- a/survey/NorthEclipticSpur.conf
+++ b/survey/NorthEclipticSpur.conf
@@ -1,8 +1,7 @@
 WLtype = True
 
 # Number of grouped visits. If commented out, the default is pairs (2)
-# #NumGroupedVisits = 3
-
+#NumGroupedVisits = 3
 
 # -----------------------------------------------------------------------
 #                   Event Sequencing Parameters
@@ -50,8 +49,6 @@ RestartCompleteSequences = False
 #SubSeqName      = u
 #SubSeqFilters   = u
 #SubSeqExposures = 1
-#SubSeqEvents    = 7
-#SubSeqEvents    = 21
 #SubSeqEvents    = 70
 #SubSeqMaxMissed = 0
 #SubSeqInterval  = 0
@@ -62,10 +59,6 @@ RestartCompleteSequences = False
 SubSeqName      = g
 SubSeqFilters   = g
 SubSeqExposures = 1
-#SubSeqEvents    = 10
-#SubSeqEvents    = 30
-#SubSeqEvents    = 100
-#SubSeqEvents 	= 80
 SubSeqEvents 	= 40
 SubSeqMaxMissed = 0
 SubSeqInterval  = 30*60
@@ -76,10 +69,6 @@ SubSeqWindowEnd         =  1.0
 SubSeqName      = r
 SubSeqFilters   = r
 SubSeqExposures = 1
-#SubSeqEvents    = 23
-#SubSeqEvents    = 69
-#SubSeqEvents    = 230
-#SubSeqEvents	= 184
 SubSeqEvents	= 92
 SubSeqMaxMissed = 0
 SubSeqInterval  = 30*60
@@ -90,10 +79,6 @@ SubSeqWindowEnd         =  1.0
 SubSeqName      = i
 SubSeqFilters   = i
 SubSeqExposures = 1
-#SubSeqEvents    = 23
-#SubSeqEvents    = 69
-#SubSeqEvents    = 230
-#SubSeqEvents	= 184
 SubSeqEvents	= 92
 SubSeqMaxMissed = 0
 SubSeqInterval  = 30*60
@@ -104,10 +89,6 @@ SubSeqWindowEnd         =  1.0
 SubSeqName      = z
 SubSeqFilters   = z
 SubSeqExposures = 1
-#SubSeqEvents    = 20
-#SubSeqEvents    = 60
-#SubSeqEvents    = 200
-#SubSeqEvents	= 160
 SubSeqEvents	= 80
 SubSeqMaxMissed = 0
 SubSeqInterval  = 30*60
@@ -118,9 +99,7 @@ SubSeqWindowEnd         =  1.0
 #SubSeqName      = y
 #SubSeqFilters   = y
 #SubSeqExposures = 1
-#SubSeqEvents    = 20
 #SubSeqEvents    = 60
-#SubSeqEvents    = 200
 #SubSeqMaxMissed = 0
 #SubSeqInterval  = 0
 #SubSeqWindowStart       = 0
@@ -143,9 +122,10 @@ OverflowLevel = 0.0
 # To disable this feature these are the values for both parameters.
 # ProgressToStartBoost = 1.00
 # MaxBoostToComplete   = 0.00
-ProgressToStartBoost = 1.0 # after 70% progress
-MaxBoostToComplete   = 10.00 # double rank near the end compared to a
-                            # non-observed field-filter
+# after 70% progress
+ProgressToStartBoost = 1.0
+# double rank near the end compared to a non-observed field-filter
+MaxBoostToComplete   = 10.00
                                                                                              
 # Galactic plane exclusion zone
 #       During a night, the EXCLUDED fields are bracketted by
@@ -167,8 +147,7 @@ deltaLST = 60.0
 #   Min/Max Declination of allowable observations
 #       Units = degree; Format = float; Default is 80.
 maxReach = 90.0
-                                                                                             
-                                                                                          
+
 #   Limits in degrees for the range of the sky to build
 #       the list of new targets every night.
 #       Default = 0.0 for both
@@ -235,8 +214,8 @@ minTransparency = .7
                                                                                              
 #   Exposure time in seconds per visit
 #       Default  = 30.
-ExposureTime = 34.0      # 2 15-secs. exposures, 1 2-secs. readout, 2-secs. shutter time
-#ExposureTime = 570.     # composite region for 19 fov hexagons
+# 2 15-secs. exposures, 1 2-secs. readout, 2-secs. shutter time
+ExposureTime = 34.0
                                                                                              
 #   Boundary when TwilightObserving begins/ends
 #       Units = degrees Format = float; Default is -12. = nautical
