Cleaning up configuration files.
* Cleaning up common content files.
* Cleaning up Filters config file.
* Cleaning up LSST config file.
* Renaming to Universal proposal.
* Cleaning up Universal proposal config file.

--- a/survey/LSST.conf
+++ b/survey/LSST.conf
@@ -4,28 +4,18 @@
 
 #       Number of years to simulate.
 #       Units = year; Format = float; Default = 1 year
-#nRun = 0.009    # about 3 days
-#nRun = 0.01918  # 1 week
-#nRun = 0.0794     # 1 lunation
-#nRun = 0.16       # 2 lunations
-#nRun = 1.0       # 1 year
-#nRun = 3.0       # 3 years
-nRun = 10.0      # 10 years
-#nRun = 1.3      # 1+ years
+nRun = 10.0
 
 #       Days relative to seeingEpoch from which simulation commences
 #       Units = MJD;    Format = float; Default == 0.0
-simStartDay = 0.0       # start simulation with first year of Weather data
-#simStartDay = 830.0    # start simulation with second year of Weather data
+# start simulation with first year of Weather data
+simStartDay = 0.0       
 
 #       Field of View
 #           Prepackaged FOV are in range: [3.0 : 4.0] in steps of .1
 #           Additional FOV are easily installed on request.
 #       Units = degree; Format = float; Default = 3.5
-fov=3.5
-#  When using bundled fov, reset Scheduler:reuseRankCount to 1
-#fov = 13.0      # large hexagon simulating 19 hexagons for fov=3.0
-#fov = 15.25     # large hexagon simulating 19 hexagons for fov=3.5
+fov = 3.5
 
 #----------------------------------------------------------------------------
 #   Seeing contributions to final seeing for a given filter
@@ -41,7 +31,8 @@ fov=3.5
 #
 # Units = unitless, Format = float, no default
 #
-telSeeing = 0.250   # design goal
+# design goal
+telSeeing = 0.250   
 opticalDesSeeing = 0.08
 cameraSeeing = 0.300
 
@@ -62,7 +53,7 @@ siteConf = system/SiteCP.conf
 
 #        Weak Lensing Proposal configuration file
 #        If missing, then do not process Weak Lensing proposal
-weakLensConf = survey/UniversalWeak.conf
+weakLensConf = survey/Universal.conf
 
 #        New Weak Lensing as Transient with subsequences for each filter.
 
