--- a/survey/Universal.conf
+++ b/survey/Universal.conf
@@ -1,7 +1,7 @@
 ScienceType = WFD
 
 ######################################################################
-########### Configuration for   Weak Lensing   #######################
+########### Configuration for Universal (Weak Lensing)   #############
 ######################################################################
 # -----------------------------------------------------------------------
 #                   Event Sequencing and Filters Parameters
@@ -19,42 +19,36 @@ ScienceType = WFD
 #       Units: arcseconds   Format: float   Default: MaxSeeing
 
 Filter = u
-#Filter_Visits  = 56
 Filter_Visits  = 75
 Filter_MaxSeeing = 1.5
 Filter_MinBrig = 21.30
 Filter_MaxBrig = 30.00
 
 Filter = g
-#Filter_Visits  = 80
 Filter_Visits  = 105
 Filter_MaxSeeing = 1.5
 Filter_MinBrig = 21.00
 Filter_MaxBrig = 30.00
                                                                                                                                
 Filter = r
-#Filter_Visits  = 184
 Filter_Visits  = 240
 Filter_MaxSeeing = 1.5
 Filter_MinBrig = 20.25
 Filter_MaxBrig = 30.00
                                                                                                                                
 Filter = i
-#Filter_Visits  = 184
 Filter_Visits  = 240
 Filter_MaxSeeing = 1.5
 Filter_MinBrig = 19.5
 Filter_MaxBrig = 30.00
                                                                                                                                
 Filter = z
-#Filter_Visits  = 160
 Filter_Visits  = 210
 Filter_MaxSeeing = 1.5
 Filter_MinBrig = 17.00
 Filter_MaxBrig = 21.00
                                                                                                                                
 Filter = y
-#Filter_Visits  = 160
 Filter_Visits  = 210
 Filter_MaxSeeing = 1.5
 Filter_MinBrig = 16.50
@@ -85,9 +79,10 @@ MaxNeedAfterOverflow = 0.0
 # To disable this feature these are the values for both parameters.
 # ProgressToStartBoost = 1.00
 # MaxBoostToComplete   = 0.00
-ProgressToStartBoost = 0.90 # after 70% progress
-MaxBoostToComplete   = 10.00 # double rank near the end compared to a 
-                            # non-observed field-filter
+# after 70% progress
+ProgressToStartBoost = 0.90
+# double rank near the end compared to a non-observed field-filter
+MaxBoostToComplete   = 10.00
 
 # Galactic plane exclusion zone
 #       During a night, the EXCLUDED fields are bracketted by
@@ -127,15 +122,14 @@ minTransparency = .7
 
 #   Exposure time in seconds per visit
 #       Default  = 30.
-ExposureTime = 34.0      # 2 15-secs. exposures, 1 2-secs. readout, 2-secs. shutter time
-#ExposureTime = 570.     # composite region for 19 fov hexagons
+# 2 15-secs. exposures, 1 2-secs. readout, 2-secs. shutter time
+ExposureTime = 34.0
 
 # MM - NOT YET IMPLEMENTED  11/03/05
 #  Hard-coded in AstronomicalSky.py to -18.0 degrees
 #   Boundary when TwilightObserving begins/ends
 #       Units = degrees Format = float; Default is -12. = nautical
 TwilightBoundary = -12.
-
 
 # -----------------------------------------------------------------------
 #                   Target Ranking Parameters
@@ -161,8 +155,7 @@ RankScale = 0.1
 AcceptSerendipity = False
 
 # Accept consecutive observations for the same field
- AcceptConsecutiveObs = False
-
+AcceptConsecutiveObs = False
 
 # Set start and stop time if proposal should not run for the entire simulation
 # duration (secs since start of simulation).
@@ -178,6 +171,7 @@ AcceptSerendipity = False
 #       Units: deg,deg,deg Format: float, float, float
 #       Default: none; do not include
 # fields/userRegions_design.txt - design fields - 18,000 sq deg
+
 userRegion = 240.05,-62.02,0.03
 userRegion = 119.94,-62.02,0.03
 userRegion = 335.95,-62.02,0.03
