Initial commit of NEO, Run 4 config.

--- a/survey/LSST.conf
+++ b/survey/LSST.conf
@@ -59,6 +59,7 @@ weakLensConf = survey/SouthCelestialPole.conf
 #        New Weak Lensing as Transient with subsequences for each filter.
 WLpropConf = survey/Universal.conf
 WLpropConf = survey/NorthEclipticSpur.conf
+WLpropConf = survey/EclipticBand.conf
 WLpropConf = survey/DDcosmology.conf
 
 #       Instrument configuration file
