Moved galactic plane fields within dec limits of WFD, into WFD.

--- a/survey/Universal.conf
+++ b/survey/Universal.conf
@@ -2572,3 +2572,180 @@ userRegion = 219.19,2.69,0.03
 userRegion = 140.81,2.69,0.03
 userRegion = 291.19,2.69,0.03
 userRegion = 68.81,2.69,0.03
+userRegion = 191.95,-62.02,0.03
+userRegion = 168.05,-62.02,0.03
+userRegion = 216.00,-61.13,0.03
+userRegion = 222.49,-61.01,0.03
+userRegion = 209.51,-61.01,0.03
+userRegion = 185.75,-60.98,0.03
+userRegion = 174.25,-60.98,0.03
+userRegion = 203.11,-60.66,0.03
+userRegion = 228.89,-60.66,0.03
+userRegion = 196.90,-60.07,0.03
+userRegion = 163.10,-60.07,0.03
+userRegion = 235.10,-60.07,0.03
+userRegion = 180.00,-59.69,0.03
+userRegion = 241.07,-59.24,0.03
+userRegion = 169.07,-59.24,0.03
+userRegion = 218.98,-58.59,0.03
+userRegion = 213.02,-58.59,0.03
+userRegion = 207.08,-58.38,0.03
+userRegion = 224.92,-58.38,0.03
+userRegion = 246.71,-58.17,0.03
+userRegion = 158.75,-57.96,0.03
+userRegion = 230.75,-57.96,0.03
+userRegion = 236.43,-57.32,0.03
+userRegion = 241.89,-56.45,0.03
+userRegion = 216.00,-56.07,0.03
+userRegion = 149.50,-55.98,0.03
+userRegion = 221.50,-55.98,0.03
+userRegion = 154.95,-55.70,0.03
+userRegion = 226.95,-55.70,0.03
+userRegion = 247.09,-55.36,0.03
+userRegion = 232.30,-55.22,0.03
+userRegion = 237.52,-54.54,0.03
+userRegion = 252.00,-54.05,0.03
+userRegion = 242.57,-53.66,0.03
+userRegion = 146.55,-53.47,0.03
+userRegion = 223.62,-53.31,0.03
+userRegion = 228.65,-52.97,0.03
+userRegion = 247.41,-52.56,0.03
+userRegion = 256.59,-52.56,0.03
+userRegion = 233.60,-52.46,0.03
+userRegion = 238.44,-51.76,0.03
+userRegion = 252.00,-51.24,0.03
+userRegion = 243.14,-50.86,0.03
+userRegion = 230.10,-50.21,0.03
+userRegion = 247.67,-49.75,0.03
+userRegion = 256.33,-49.75,0.03
+userRegion = 234.69,-49.68,0.03
+userRegion = 239.21,-48.97,0.03
+userRegion = 252.00,-48.44,0.03
+userRegion = 243.61,-48.07,0.03
+userRegion = 260.39,-48.07,0.03
+userRegion = 256.11,-46.96,0.03
+userRegion = 247.89,-46.96,0.03
+userRegion = 235.64,-46.88,0.03
+userRegion = 239.87,-46.17,0.03
+userRegion = 264.13,-46.17,0.03
+userRegion = 252.00,-45.65,0.03
+userRegion = 259.98,-45.28,0.03
+userRegion = 244.02,-45.28,0.03
+userRegion = 255.93,-44.18,0.03
+userRegion = 248.07,-44.18,0.03
+userRegion = 267.54,-44.06,0.03
+userRegion = 240.45,-43.37,0.03
+userRegion = 263.55,-43.37,0.03
+userRegion = 252.00,-42.87,0.03
+userRegion = 244.38,-42.49,0.03
+userRegion = 259.62,-42.49,0.03
+userRegion = 248.24,-41.41,0.03
+userRegion = 255.76,-41.41,0.03
+userRegion = 266.79,-41.23,0.03
+userRegion = 263.04,-40.55,0.03
+userRegion = 252.00,-40.10,0.03
+userRegion = 244.69,-39.71,0.03
+userRegion = 259.31,-39.71,0.03
+userRegion = 269.66,-38.89,0.03
+userRegion = 248.38,-38.65,0.03
+userRegion = 255.62,-38.65,0.03
+userRegion = 266.09,-38.36,0.03
+userRegion = 262.54,-37.71,0.03
+userRegion = 252.00,-37.35,0.03
+userRegion = 259.02,-36.91,0.03
+userRegion = 272.19,-36.40,0.03
+userRegion = 268.77,-35.97,0.03
+userRegion = 255.49,-35.90,0.03
+userRegion = 248.51,-35.90,0.03
+userRegion = 265.39,-35.44,0.03
+userRegion = 262.04,-34.82,0.03
+userRegion = 252.00,-34.59,0.03
+userRegion = 258.71,-34.08,0.03
+userRegion = 274.44,-33.82,0.03
+userRegion = 271.13,-33.45,0.03
+userRegion = 255.37,-33.15,0.03
+userRegion = 267.86,-32.99,0.03
+userRegion = 264.64,-32.46,0.03
+userRegion = 261.46,-31.85,0.03
+userRegion = 252.00,-31.83,0.03
+userRegion = 276.47,-31.20,0.03
+userRegion = 258.33,-31.16,0.03
+userRegion = 273.24,-30.86,0.03
+userRegion = 270.05,-30.45,0.03
+userRegion = 255.22,-30.35,0.03
+userRegion = 266.89,-29.97,0.03
+userRegion = 263.78,-29.41,0.03
+userRegion = 260.71,-28.78,0.03
+userRegion = 278.39,-28.55,0.03
+userRegion = 275.23,-28.25,0.03
+userRegion = 257.68,-28.08,0.03
+userRegion = 272.10,-27.88,0.03
+userRegion = 269.01,-27.44,0.03
+userRegion = 265.96,-26.92,0.03
+userRegion = 262.95,-26.34,0.03
+userRegion = 259.96,-25.70,0.03
+userRegion = 277.05,-25.63,0.03
+userRegion = 273.97,-25.29,0.03
+userRegion = 256.96,-25.02,0.03
+userRegion = 270.91,-24.89,0.03
+userRegion = 267.88,-24.42,0.03
+userRegion = 264.86,-23.88,0.03
+userRegion = 261.83,-23.30,0.03
+userRegion = 278.75,-22.99,0.03
+userRegion = 258.70,-22.72,0.03
+userRegion = 275.69,-22.70,0.03
+userRegion = 272.65,-22.34,0.03
+userRegion = 269.61,-21.91,0.03
+userRegion = 266.57,-21.43,0.03
+userRegion = 263.49,-20.92,0.03
+userRegion = 260.32,-20.41,0.03
+userRegion = 280.36,-20.36,0.03
+userRegion = 277.31,-20.11,0.03
+userRegion = 274.27,-19.79,0.03
+userRegion = 271.23,-19.41,0.03
+userRegion = 268.17,-18.99,0.03
+userRegion = 265.07,-18.54,0.03
+userRegion = 281.91,-17.74,0.03
+userRegion = 278.87,-17.53,0.03
+userRegion = 275.83,-17.26,0.03
+userRegion = 272.78,-16.92,0.03
+userRegion = 269.71,-16.55,0.03
+userRegion = 266.60,-16.15,0.03
+userRegion = 283.43,-15.12,0.03
+userRegion = 280.38,-14.96,0.03
+userRegion = 277.33,-14.73,0.03
+userRegion = 274.28,-14.44,0.03
+userRegion = 271.21,-14.11,0.03
+userRegion = 268.10,-13.76,0.03
+userRegion = 281.88,-12.40,0.03
+userRegion = 278.82,-12.21,0.03
+userRegion = 275.76,-11.96,0.03
+userRegion = 272.68,-11.67,0.03
+userRegion = 269.58,-11.36,0.03
+userRegion = 283.39,-9.85,0.03
+userRegion = 280.31,-9.70,0.03
+userRegion = 277.23,-9.49,0.03
+userRegion = 274.15,-9.23,0.03
+userRegion = 271.05,-8.95,0.03
+userRegion = 284.90,-7.32,0.03
+userRegion = 281.81,-7.21,0.03
+userRegion = 278.72,-7.03,0.03
+userRegion = 275.62,-6.80,0.03
+userRegion = 272.52,-6.54,0.03
+userRegion = 286.44,-4.81,0.03
+userRegion = 283.32,-4.73,0.03
+userRegion = 280.21,-4.58,0.03
+userRegion = 277.10,-4.37,0.03
+userRegion = 274.00,-4.13,0.03
+userRegion = 288.00,-2.31,0.03
+userRegion = 284.86,-2.26,0.03
+userRegion = 281.72,-2.14,0.03
+userRegion = 278.60,-1.95,0.03
+userRegion = 275.48,-1.72,0.03
+userRegion = 286.42,0.19,0.03
+userRegion = 289.58,0.19,0.03
+userRegion = 283.26,0.28,0.03
+userRegion = 280.11,0.45,0.03
+userRegion = 276.97,0.67,0.03
+userRegion = 288.00,2.64,0.03
+userRegion = 284.81,2.69,0.03
