This is the set of files used to produce minion_1016.

--- a/scheduler/Scheduler.conf
+++ b/scheduler/Scheduler.conf
@@ -12,9 +12,11 @@ MaxSlewTimeBonus = 5.0
 # final ranking and selection
 #       Units = none; Format = integer  Default = 100
 NumSuggestedObsPerProposal = 500 
+#NumSuggestedObsPerProposal = 50
 
 # Count of Observations to take using precalculated science quantities
 #       Units = none; Format = integer  Default = 20
+#reuseRankingCount = 1
 reuseRankingCount = 10
 
 # Value for which provided seeing is "Too Good To Be True" and is
@@ -22,6 +24,7 @@ reuseRankingCount = 10
 #       Units = arcseconds; Format = float  Default = .4
 tooGoodSeeingLimit = 0.25
 
+#randomizeSequencesSelection = True
 randomizeSequencesSelection = False
 
 # Filters Swap parameters
