--- a/system/AstronomicalSky.conf
+++ b/system/AstronomicalSky.conf
@@ -19,18 +19,23 @@ SBRAScale = 7.
 # Resolution scale for RA (decimal degrees). Default = 7.
 SBDecScale = 7.
 
+
 ####################### Optimizations: Airmass ########################
 
 # Setting scales to 1. will effectively turn off cacheing.
 
 # Resolution scale for dates (seconds). Default = 30.
+#ADateScale = 30.
 ADateScale = 1.
 
 # Resolution scale for RA (decimal degrees). Default = 5.
+#ARAScale = 5.
 ARAScale = 1.
 
 # Resolution scale for Dec (decimal degrees). Default = 5.
+#ADecScale = 5.
 ADecScale = 1.
+
 
 ######################################################################
 ###################### TWILIGHT PARAMETERS ###########################
@@ -51,3 +56,4 @@ SunAltitudeTwilightLimit = -18.0
 # model during the twilight period defined by the parameters
 # SunAltitudeNightLimit and SunAltitudeTwilightLimit
 TwilightBrightness = 17.3
+
