--- a/survey/DDcosmology1.conf
+++ b/survey/DDcosmology1.conf
@@ -44,6 +44,7 @@ MasterSubSequence = main
 #   SubSeqWindowEnd  = Time at which event is abandoned. No default.
 SubSeqName     		= main
 SubSeqFilters		= r,g,i,z,y 
+#SubSeqExposures	= 40,20,40,52,40
 SubSeqExposures		= 20,10,20,26,20
 SubSeqEvents    	= 27
 SubSeqMaxMissed		= 0
@@ -54,6 +55,7 @@ SubSeqWindowEnd		= 0.70
 
 SubSeqName              = u-band
 SubSeqFilters           = u
+#SubSeqExposures         = 40
 SubSeqExposures         = 20
 SubSeqEvents            = 7
 SubSeqMaxMissed         = 0
@@ -61,7 +63,7 @@ SubSeqInterval          = 1*24*60*60
 SubSeqWindowStart       =-0.20
 SubSeqWindowMax         = 0.50
 SubSeqWindowEnd         = 0.70
-
+#
 #SubSeqName              = last
 #SubSeqFilters           = g
 #SubSeqExposures         = 10
@@ -100,6 +102,24 @@ Filter_MaxBrig = 30.00
 Filter = y
 Filter_MinBrig = 17.50
 Filter_MaxBrig = 30.00
+
+# ----------------------------------------------------------------------
+#                       Field Selection Parameters
+#-----------------------------------------------------------------------
+#   User Region Definitions
+#       list of (ra,dec,width)  containing center point around which a cone of
+#                            diameter width is centered.
+#       Units: deg,deg,deg Format: float, float, float
+#       Default: none; do not include
+########################################################################
+# NOTE: DO NOT use spaces between these values or you will break config!
+########################################################################
+#userRegion = 0.0,-34.0, 4.0
+userRegion = 0.01,-45.5,0.2
+userRegion = 34.39,-5.1,0.2
+userRegion = 53.0,-27.34,0.2
+userRegion = 150.0,2.84,0.2
+userRegion = 349.4,-63.3,0.2
 
 #   Limits in degrees for the range of the sky to build
 #       the list of new targets every night.
@@ -151,8 +171,8 @@ minTransparency = .7
 
 #   Exposure time in seconds per visit
 #       Units: seconds   Format: float   Default: 30.0
-# 2 15-secs. exposures, 1 2-secs. readout, 2-secs. shutter time
-ExposureTime = 34.0
+ExposureTime = 34.0      # 2 15-secs. exposures, 1 2-secs. readout, 2-secs. shutter time
+#ExposureTime = 570.     # composite region for 19 fov hexagons
 
 # MM - NOT YET IMPLEMENTED  11/03/05
 #  Hard-coded in AstronomicalSky.py to -18.0 degrees
@@ -208,20 +228,116 @@ AcceptConsecutiveObs = True
 #StartTime =
 #StopTime =
 
-# ----------------------------------------------------------------------
-#                       Field Selection Parameters
-#-----------------------------------------------------------------------
-#   User Region Definitions
-#       list of (ra,dec,width)  containing center point around which a cone of
-#                            diameter width is centered.
-#       Units: deg,deg,deg Format: float, float, float
-#       Default: none; do not include
-########################################################################
-# NOTE: DO NOT use spaces between these values or you will break config!
-########################################################################
-
-userRegion = 0.01,-45.5,0.2
-userRegion = 34.39,-5.1,0.2
-userRegion = 53.0,-27.34,0.2
-userRegion = 150.0,2.84,0.2
-userRegion = 349.4,-63.3,0.2
+#==========================================================================
+#             KBO Sample Sequence setup and description:
+# ============================================================
+# MasterSubSequence = main
+#                    
+# SubSeqName              = main
+# SubSeqFilters           = r i
+# SubSeqExposures         = 3 4
+# SubSeqEvents            = 4
+# SubSeqMaxMissed         = 1
+# SubSeqInterval          = 1*24*60*60
+# SubSeqWindowStart       =-0.5
+# SubSeqWindowMax         = 0.35
+# SubSeqWindowEnd         = 0.50
+#                   
+# SubSeqName              = extra
+# SubSeqFilters           = g
+# SubSeqExposures         = 10
+# SubSeqEvents            = 3
+# SubSeqMaxMissed         = 1
+# SubSeqInterval          = 2*24*60*60
+# SubSeqWindowStart       =-0.30
+# SubSeqWindowMax         = 0.30
+# SubSeqWindowEnd         = 0.50
+#                  
+# SubSeqName              = last
+# SubSeqFilters           = r  i y
+# SubSeqExposures         = 10 3 2
+# SubSeqEvents            = 2
+# SubSeqMaxMissed         = 0
+# SubSeqInterval          = 4*24*60*60
+# SubSeqWindowStart       =-0.50
+# SubSeqWindowMax         = 0.30
+# SubSeqWindowEnd         = 0.50
+# 
+# 1-Several subsequences can be defined with no limits.
+#                                                                              
+# 2-Each subsequence needs a name, any single-word-string or number.
+#                                                                             
+# 3-The SubSeqFilters keyword describes the series of filters to use in a
+# single event (or complex event).
+#                                                                            
+# 4-The SubSeqExposures keyword describes the number of repeated exposures for
+# each one of the respective filters in SubSeqFilters. All these exposures will
+# be taken in a single observation block, one after the other, changing the
+# filter as indicated. There is no limit in the number of filters to use in
+# this "microsequence". Other proposals cannot interrupt the completion of
+# this complex event, but will analyze the exposures for serendipity. The
+# complex-event can be interrupted by downtime like clouds, end of night, etc.
+# In case of interruption, the event is missed.
+#                                                                           
+# 5-The event is proposed only if all the required filters are available from
+# sky brightness criteria.
+#                                                                          
+#                                                                         
+# 6-All the other parameters have exactly the same meaning as in SNSS proposal.
+#                                                                        
+# The example above says that the master subsequence is "main", the whole
+# sequence must start with that one. The "main" subsequence needs 4 events
+# with an interval of 1 day; each interval is composed of 3 r consecutive
+# exposures followed by 4 i exposures. Only 1 event can be missed without
+# losing the whole sequence.
+# The subsequence "extra" has 3 events, each one composed of 10 consecutive g
+# exposures.
+# The subsequence "last" has 2 events, none can be missed, each one composed
+# of 10 r exposures, followed by 3 i and finally 2 y.
+#                                                   
+# 7-The ObsScheduler was modified to support this complex-events. It works the
+# same way as before, computing 20 (parameter) observations in a block to save
+# cpu. If one observation from KBO is taken, then this proposal gains the
+# exclusive attention from the scheduler while the complex-event is observed.
+# Each exposure is sent with a special flag to all the other proposals to
+# check for serendipity. Once the complex-event is finished, the scheduler
+# returns to its normal block of 20 mode.
+#                                                
+#==========================================================================
+#==========================================================================
+#   Priority Ranking Scheme across all Proposals
+#
+#   All proposals use the same ranking scale of values [0.0 : 1.0] .
+#       Rank 0.0  indicates that, in the current context of the proposal, 
+#           a Field should not be observed.
+#       Rank 0.1 is a 'stand-by' rank indicating that the Field is ready to
+#           be observed (but there is no urgency).
+#       Rank 0.5 indicates increasing urgency to observe the Field due to 
+#           the Proposal's scheduling requirements. Few Fields at any moment
+#           should have such a high priority.
+#       Rank 1.0 indicates urgent need to observe the Field.  Failure to 
+#           observe immediately will cause the current subsequence to abort.
+#====================================================================
+#   Priority Ranking within a Sequenced-Events Proposal
+#
+#   A Sequenced-event proposal uses the closeness between the current 
+#       Simulation Time and the Next Event time as the primary ranking 
+#       criteria for a Field.
+#
+#       A timing window is constructed from the time interval between 
+#       the next Visit and the previous Visit. From that interval an urgency 
+#       scale is created to the precision required.
+#
+#   The normalized time scale used is as follows:
+#       normalizedT = (currentTime-nextVisitTime)/(nextVisitTime-lastVisitTime)
+#
+#   The priority ranking of an observing visit starts rising at "WindowStart";
+#       it reaches a maximum value at "WindowMax"; and it is
+#       abandoned at "WindowEnd" if it still hasn't been observed.
+#   
+#   Using defaults: WindowStart=-0.20, WindowMax=0.20; WindowEnd=4.0,
+#       The priority begins rising at (0.2 * normalizedT) before the Visit time;
+#       it reaches the maximum priority at (0.2 * normalizedT) after the event 
+#       time; and returns to lowest prioirty at (0.4 * normalizedT) after 
+#       the Visit time.  
+#       Note: negative indicates *before* Visit time, positive is *after* Visit.
