--- a/survey/GalacticPlaneProp.conf
+++ b/survey/GalacticPlaneProp.conf
@@ -77,10 +77,10 @@ MaxNeedAfterOverflow = 0.0
 # To disable this feature these are the values for both parameters.
 # ProgressToStartBoost = 1.00
 # MaxBoostToComplete   = 0.00
- # after 70% progress
-ProgressToStartBoost = 1.00
-# double rank near the end compared to a non-observed field-filter
-MaxBoostToComplete   = 0.00 
+ProgressToStartBoost = 1.00 # after 70% progress
+MaxBoostToComplete   = 0.00 # double rank near the end compared to a 
+                            # non-observed field-filter
+
 
 # Galactic plane exclusion zone
 #       During a night, the EXCLUDED fields are bracketted by
@@ -120,12 +120,13 @@ minTransparency = 0.7
 
 #   Exposure time in seconds per visit
 #       Default  = 30.
-# 2 15-secs. exposures, 1 2-secs. readout, 2-secs. shutter time
-ExposureTime = 34.0
+ExposureTime = 34.0      # 2 15-secs. exposures, 1 2-secs. readout, 2-secs. shutter time
+#ExposureTime = 570.     # composite region for 19 fov hexagons
 
 #   Boundary when TwilightObserving begins/ends
 #       Units = degrees Format = float; Default is -12. = nautical
 TwilightBoundary = -12.
+
 
 # -----------------------------------------------------------------------
 #                   Target Ranking Parameters
@@ -158,6 +159,23 @@ AcceptConsecutiveObs = False
 #StartTime =
 #StopTime = 
 
+#====================================================================
+#   Priority Ranking Scheme across all Proposals
+#
+#   All proposals use the same ranking scale of values [0.0 : 1.0] .
+#       Rank 0.0  indicates that, in the current context of the proposal,
+#           a Field should not be observed.
+#       Rank 0.1 is a 'stand-by' rank indicating that the Field is ready to
+#           be observed (butthere is no urgency).
+#       Rank 0.5 indicates increasing urgency to observe the Field due to
+#           the Proposal's scheduling requirements. Few Fields at any moment
+#           should have such a high priority.
+#       Rank 1.0 indicates urgent need to observe the Field.  Failure to
+#           observe immediately will cause the current sequence to abort.
+#====================================================================
+
+
+
 # ----------------------------------------------------------------------
 #                       Field Selection Parameters
 #-----------------------------------------------------------------------
@@ -166,6 +184,8 @@ AcceptConsecutiveObs = False
 #                            diameter width is centered.
 #       Units: deg,deg,deg Format: float, float, float
 #       Default: none; do not include
+
+
 
 userRegion = 208.17,-65.93,0.03
 userRegion = 200.52,-65.50,0.03
@@ -400,3 +420,4 @@ userRegion = 304.77,35.97,0.03
 userRegion = 305.66,38.89,0.03
 userRegion = 309.27,39.31,0.03
 userRegion = 310.41,42.18,0.03
+
