--- a/survey/LSSTenig1189.conf
+++ b/survey/LSSTenig1189.conf
@@ -4,18 +4,28 @@
 
 #       Number of years to simulate.
 #       Units = year; Format = float; Default = 1 year
-nRun = 10.0
+#nRun = 0.009    # about 3 days
+#nRun = 0.01918  # 1 week
+#nRun = 0.0794     # 1 lunation
+#nRun = 0.16       # 2 lunations
+#nRun = 1.0       # 1 year
+#nRun = 3.0       # 3 years
+nRun = 10.0      # 10 years
+#nRun = 1.3      # 1+ years
 
 #       Days relative to seeingEpoch from which simulation commences
 #       Units = MJD;    Format = float; Default == 0.0
-# start simulation with first year of Weather data
-simStartDay = 0.0       
+simStartDay = 0.0       # start simulation with first year of Weather data
+#simStartDay = 830.0    # start simulation with second year of Weather data
 
 #       Field of View
 #           Prepackaged FOV are in range: [3.0 : 4.0] in steps of .1
 #           Additional FOV are easily installed on request.
 #       Units = degree; Format = float; Default = 3.5
-fov = 3.5
+fov=3.5
+        #  When using bundled fov, reset Scheduler:reuseRankCount to 1
+        #fov = 13.0      # large hexagon simulating 19 hexagons for fov=3.0
+        #fov = 15.25     # large hexagon simulating 19 hexagons for fov=3.5
 
 #----------------------------------------------------------------------------
 #   Seeing contributions to final seeing for a given filter
@@ -31,8 +41,7 @@ fov = 3.5
 #
 # Units = unitless, Format = float, no default
 #
-# design goal
-telSeeing = 0.250   
+telSeeing = 0.250   # design goal
 opticalDesSeeing = 0.08
 cameraSeeing = 0.300
 
@@ -48,36 +57,46 @@ atmNeffFactor = 1.04
 #           {WeakLensProp.conf,NearEarthProp.conf,Instrument.conf}
 #----------------------------------------------------------------------------
 #       Site Specific configuration file
-#           SiteCP=Cerro Pachon
-siteConf = system/SiteCP.conf
+#           SiteCP=Cerro Pachon; SiteCT=Cerro Tololo;
+#           SiteSPM=San Pedro Martir; SiteLC=Las Companas
+#siteConf = ./SiteSPM.conf
+siteConf = conf/system/SiteCP.conf
 
 #        Weak Lensing Proposal configuration file
 #        If missing, then do not process Weak Lensing proposal
-weakLensConf = survey/GalacticPlaneProp.conf
-weakLensConf = survey/SouthCelestialPole.conf
+#weakLensConf = conf/survey/WeakLensProp.conf
+weakLensConf = conf/survey/GalacticPlaneProp.conf
+weakLensConf = conf/survey/SouthCelestialPole-18.conf
+#weakLensConf = conf/survey/UniversalWeak-18-0824.conf
+#weakLensConf = conf/survey/UniversalWeakPS90-120.conf
+#weakLensConf = conf/survey/Standby.conf
 
 #        New Weak Lensing as Transient with subsequences for each filter.
-WLpropConf = survey/Universal.conf
-WLpropConf = survey/NorthEclipticSpur.conf
-WLpropConf = survey/DDcosmology.conf
+#WLpropConf = conf/survey/WLprop.conf
+#WLpropConf = conf/survey/UniversalPanStarrs.conf
+WLpropConf = conf/survey/Universal-18-0824B.conf
+WLpropConf = conf/survey/NorthEclipticSpur-18c.conf
+WLpropConf = conf/survey/DDcosmology1.conf
+#WLpropConf = conf/survey/DDcosmology2.conf
+#WLpropConf = conf/survey/DeepDrillingMilkyWay.conf
+#WLpropConf = conf/survey/DeepDrillingTransients.conf
+#WLpropConf = conf/survey/oldSNdeep.conf
+
 
 #       Instrument configuration file
-instrumentConf = system/Instrument.conf
+instrumentConf = conf/system/Instrument.conf
 
 #        Downtime configuration files
-schedDownConf = system/schedDown.conf
-unschedDownConf = system/unschedDown.conf
+schedDownConf = conf/system/schedDown.conf
+unschedDownConf = conf/system/unschedDown.conf
 
 #        Filters configuration file
-filtersConf = system/Filters.conf
+filtersConf = conf/system/Filters.conf
 
 #        Observation Scheduler configuration file
-schedulerConf = scheduler/Scheduler.conf
+schedulerConf = conf/scheduler/Scheduler.conf
 
-schedulingDataConf = scheduler/SchedulingData.conf
-
-#        Astronomical Sky configuration file
-astroskyConf = system/AstronomicalSky.conf
+schedulingDataConf = conf/scheduler/SchedulingData.conf
 
 #------------------------------------------------------------------------------
 #       Database Table names
