--- a/survey/Universal-18-0824B.conf
+++ b/survey/Universal-18-0824B.conf
@@ -2,7 +2,8 @@ WLtype = True
 ScienceType = WFD
 
 # Number of grouped visits. If commented out, the default is pairs (2)
-#NumGroupedVisits = 3
+# NumGroupedVisits = 3
+
 
 # -----------------------------------------------------------------------
 #                   Event Sequencing Parameters
@@ -40,8 +41,7 @@ RestartCompleteSequences = True
 #   SubSeqInterval   = Time interval (sec) between events in a Sequence.
 #                      No default.
 #   SubSeqInterval   = time interval between events.
-#                      if WLtype=True and SubSeqInterval>0, that interval applies 
-#                      to the second of each pair of events.
+#                      if WLtype=True and SubSeqInterval>0, that interval applies to the second of each pair of events.
 #   SubSeqWindowStart= Time at which event's priority starts rising. No default
 #   SubSeqWindowMax  = Time at which event's priority reaches max.  No default.
 #   SubSeqWindowEnd  = Time at which event is abandoned. No default.
@@ -51,7 +51,12 @@ RestartCompleteSequences = True
 SubSeqName      = u
 SubSeqFilters   = u
 SubSeqExposures = 1
+#SubSeqEvents    = 6
+#SubSeqEvents    = 21
+#SubSeqEvents    = 70
 SubSeqEvents	= 75
+#SubSeqEvents    = 56
+#SubSeqEvents    = 28
 SubSeqMaxMissed = 0
 SubSeqInterval  = 0
 SubSeqWindowStart       = 0
@@ -61,7 +66,11 @@ SubSeqWindowEnd         = 0
 SubSeqName      = g
 SubSeqFilters   = g
 SubSeqExposures = 1
+#SubSeqEvents    = 8
+#SubSeqEvents    = 30
+#SubSeqEvents    = 100
 SubSeqEvents	= 105
+#SubSeqEvents    = 80
 SubSeqMaxMissed = 0
 SubSeqInterval  = 30*60
 SubSeqWindowStart       = -0.5
@@ -71,7 +80,11 @@ SubSeqWindowEnd         =  1.0
 SubSeqName      = r
 SubSeqFilters   = r
 SubSeqExposures = 1
+#SubSeqEvents    = 19
+#SubSeqEvents    = 69
+#SubSeqEvents    = 230
 SubSeqEvents	= 240
+#SubSeqEvents    = 184
 SubSeqMaxMissed = 0
 SubSeqInterval  = 30*60
 SubSeqWindowStart       = -0.5
@@ -81,7 +94,11 @@ SubSeqWindowEnd         =  1.0
 SubSeqName      = i
 SubSeqFilters   = i
 SubSeqExposures = 1
+#SubSeqEvents    = 19
+#SubSeqEvents    = 69
+#SubSeqEvents    = 230
 SubSeqEvents	= 240
+#SubSeqEvents    = 184
 SubSeqMaxMissed = 0
 SubSeqInterval  = 30*60
 SubSeqWindowStart       = -0.5
@@ -91,7 +108,11 @@ SubSeqWindowEnd         =  1.0
 SubSeqName      = z
 SubSeqFilters   = z
 SubSeqExposures = 1
+#SubSeqEvents    = 16
+#SubSeqEvents    = 60
+#SubSeqEvents    = 200
 SubSeqEvents    = 210
+#SubSeqEvents    = 160
 SubSeqMaxMissed = 0
 SubSeqInterval  = 30*60
 SubSeqWindowStart       = -0.5
@@ -101,7 +122,11 @@ SubSeqWindowEnd         =  1.0
 SubSeqName      = y
 SubSeqFilters   = y
 SubSeqExposures = 1
+#SubSeqEvents    = 16
+#SubSeqEvents    = 60
+#SubSeqEvents    = 200
 SubSeqEvents	= 210
+#SubSeqEvents    = 160
 SubSeqMaxMissed = 0
 SubSeqInterval  = 0
 SubSeqWindowStart       = 0
@@ -124,151 +149,10 @@ OverflowLevel = 0.0
 # To disable this feature these are the values for both parameters.
 # ProgressToStartBoost = 1.00
 # MaxBoostToComplete   = 0.00
-# after 70% progress
-ProgressToStartBoost = 0.90
-# double rank near the end compared to a non-observed field-filter
-MaxBoostToComplete   = 10.00
-
-# Galactic plane exclusion zone
-#       During a night, the EXCLUDED fields are bracketted by
-#       region: +/- peakL deg in latitude at 0 longitude   going to
-#               +/- taperL deg in latitude at taperB longitude.
-#       defaults: +/- 25. deg in latitude at 0 deg longitude going to
-#               +/- 5. deg in latitude at 180. deg longitude.
-#       Units = degree; Format = float; Default: taperL=5, taperB=180 peakL=25
-taperL = 0.0
-taperB = 0.0
-peakL = 0.0
+ProgressToStartBoost = 0.90 # after 70% progress
+MaxBoostToComplete   = 10.00 # double rank near the end compared to a
+                            # non-observed field-filter
                                                                                              
-#   During night potentially visible fields are bracketted by region:
-#       [LST@sunSet-deltaLST:LST@sunRise+deltaLST],
-#                          [Dec-arccos(1/MaxAirmass: Dec+arccos(1/MaxAirmass]
-#       Units = degree; Format = float; Default is 60.0
-deltaLST = 60.0
-                                                                                             
-#   Min/Max Declination of allowable observations
-#       Units = degree; Format = float; Default is 80.
-maxReach = 90.0
-
-#   Limits in degrees for the range of the sky to build
-#       the list of new targets every night.
-#       Default = 0.0 for both
-newFieldsLimitEast_afterLSTatSunset   = 0.0
-newFieldsLimitWest_beforeLSTatSunrise = 0.0
-                                                                                          
-#   Ecliptic inclusion zone
-#       During a night the potentially visible fields are bracketted by
-#       region: [*],[-EB : +EB]
-#       Units = Ecliptic degree; Format = float; Default is 10; Don't use=0.
-EB = 0
-
-# --------------------------------------------------------------------
-#               Target Selection Parameters
-# --------------------------------------------------------------------
-#   Maximum accepted airmass
-#       Units: unitless Format: float   Default: 2.0
-MaxAirmass   = 1.5
-                                                                                             
-#   Max acceptable airmass-adjusted-seeing per filter
-#       Units: arcseconds   Format: float   Default: MaxSeeing
-# Filter         Units: label     Format: character
-# MinBrightness  Units:           Format: float; relative to v-band brightness
-#                                                             and extinction
-# MaxBrightness  Units:           Format: float; relative to v-band brightness
-#                                                             and extinction
-Filter = u
-Filter_MinBrig = 21.30
-Filter_MaxBrig = 30.00
-Filter_MaxSeeing= 1.5
-                                                                                                          
-Filter = g
-Filter_MinBrig = 21.00
-Filter_MaxBrig = 30.00
-Filter_MaxSeeing= 1.5
-
-Filter = r
-Filter_MinBrig = 20.25
-Filter_MaxBrig = 30.00
-Filter_MaxSeeing= 1.5
-
-Filter = i
-Filter_MinBrig = 19.50
-Filter_MaxBrig = 30.00
-Filter_MaxSeeing= 1.5
-
-Filter = z
-Filter_MinBrig = 17.00
-Filter_MaxBrig = 21.00
-Filter_MaxSeeing= 1.5
-
-Filter = y
-Filter_MinBrig = 16.50
-Filter_MaxBrig = 21.00
-Filter_MaxSeeing= 1.5
-
-#   Default max airmass adjusted seeing if specific filter not provided
-#       Units: arcseconds  Format: float   Default: none
-MaxSeeing    = 1.5
-                                                                                             
-#   Minimum Cloud Transparency of allowable observations
-#       Units = range 0:1; Format = float; Default is .9, Hardcoded limit =.9
-minTransparency = .7
-                                                                                             
-#   Exposure time in seconds per visit
-#       Default  = 30.
-# 2 15-secs. exposures, 1 2-secs. readout, 2-secs. shutter time
-ExposureTime = 34.0
-                                                                                             
-#   Boundary when TwilightObserving begins/ends
-#       Units = degrees Format = float; Default is -12. = nautical
-TwilightBoundary = -12.
-                                                                                             
-# -----------------------------------------------------------------------
-#                   Target Ranking Parameters
-# -----------------------------------------------------------------------
-#   Relative priority parameter for the proposal.
-#       This factor is applied in the final rank for all the observations
-#       proposed by this proposal. Default = 1.0
-RelativeProposalPriority = 1.1
-                                                                                             
-#   Proximity bonus factor that is added internally in the proposal
-#       to select the observations to propose promoting the closest to the
-#       current telescope position.
-#       However, the scheduler then replaces this bonus by the more accurate
-#       slew time prediction.
-MaxProximityBonus = 0.1
-                                                                                             
-#   Ranking values
-#
-#   Maximum rank scale for the time window
-#       No default.
-RankTimeMax = 5.00
-                                                                                          
-#   Rank for an idle sequence (not started yet)
-#   or average rank for no timewindow (distribution WLtype)
-#       No default.
-RankIdleSeq = 0.10
-
-#   Maximum rank bonus for sequence that has exhausted allowable misses.
-#       No default.
-RankLossRiskMax = 0.0
-                                                                                          
-# Disabled values, formula still on development.
-RankDaysLeftMax = 0.0
-DaysLeftToStartBoost = 0                                                    
-
-# Accept observations with low ranking in this proposal
-# that have been observed for other proposals?
-AcceptSerendipity = False
-
-# Accept consecutive observations for the same field
-AcceptConsecutiveObs = False
-
-# Set start and stop time if proposal should not run for the entire simulation
-# duration (secs since start of simulation).
-#StartTime = 365
-#StopTime = 730
-
 # ----------------------------------------------------------------------
 #                       Field Selection Parameters
 #-----------------------------------------------------------------------
@@ -277,8 +161,8 @@ AcceptConsecutiveObs = False
 #                            diameter width is centered.
 #       Units: deg,deg,deg Format: float, float, float
 #       Default: none; do not include
-# fields/userRegions_design.txt - design fields - 18,000 sq deg
 
+# fields/userRegions_design.txt - design fields - 18,000 sq deg
 userRegion = 240.05,-62.02,0.03
 userRegion = 119.94,-62.02,0.03
 userRegion = 335.95,-62.02,0.03
@@ -2572,3 +2456,148 @@ userRegion = 219.19,2.69,0.03
 userRegion = 140.81,2.69,0.03
 userRegion = 291.19,2.69,0.03
 userRegion = 68.81,2.69,0.03
+
+# Galactic plane exclusion zone
+#       During a night, the EXCLUDED fields are bracketted by
+#       region: +/- peakL deg in latitude at 0 longitude   going to
+#               +/- taperL deg in latitude at taperB longitude.
+#       defaults: +/- 25. deg in latitude at 0 deg longitude going to
+#               +/- 5. deg in latitude at 180. deg longitude.
+#       Units = degree; Format = float; Default: taperL=5, taperB=180 peakL=25
+#taperL = 0.1
+#taperB = 90.
+#peakL = 10.
+taperL = 0.0
+taperB = 0.0
+peakL = 0.0
+                                                                                             
+#   During night potentially visible fields are bracketted by region:
+#       [LST@sunSet-deltaLST:LST@sunRise+deltaLST],
+#                          [Dec-arccos(1/MaxAirmass: Dec+arccos(1/MaxAirmass]
+#       Units = degree; Format = float; Default is 60.0
+deltaLST = 60.0
+                                                                                             
+#   Min/Max Declination of allowable observations
+#       Units = degree; Format = float; Default is 80.
+maxReach = 90.0
+                                                                                             
+                                                                                          
+#   Limits in degrees for the range of the sky to build
+#       the list of new targets every night.
+#       Default = 0.0 for both
+newFieldsLimitEast_afterLSTatSunset   = 0.0
+newFieldsLimitWest_beforeLSTatSunrise = 0.0
+                                                                                          
+#   Ecliptic inclusion zone
+#       During a night the potentially visible fields are bracketted by
+#       region: [*],[-EB : +EB]
+#       Units = Ecliptic degree; Format = float; Default is 10; Don't use=0.
+EB = 0
+
+# --------------------------------------------------------------------
+#               Target Selection Parameters
+# --------------------------------------------------------------------
+#   Maximum accepted airmass
+#       Units: unitless Format: float   Default: 2.0
+MaxAirmass   = 1.5
+                                                                                             
+#   Max acceptable airmass-adjusted-seeing per filter
+#       Units: arcseconds   Format: float   Default: MaxSeeing
+# Filter         Units: label     Format: character
+# MinBrightness  Units:           Format: float; relative to v-band brightness
+#                                                             and extinction
+# MaxBrightness  Units:           Format: float; relative to v-band brightness
+#                                                             and extinction
+Filter = u
+Filter_MinBrig = 21.30
+Filter_MaxBrig = 30.00
+Filter_MaxSeeing= 1.5
+                                                                                                          
+Filter = g
+Filter_MinBrig = 21.00
+Filter_MaxBrig = 30.00
+Filter_MaxSeeing= 1.5
+
+Filter = r
+Filter_MinBrig = 20.25
+Filter_MaxBrig = 30.00
+Filter_MaxSeeing= 1.5
+
+Filter = i
+Filter_MinBrig = 19.50
+Filter_MaxBrig = 30.00
+Filter_MaxSeeing= 1.5
+
+Filter = z
+Filter_MinBrig = 17.00
+Filter_MaxBrig = 21.00
+Filter_MaxSeeing= 1.5
+
+Filter = y
+Filter_MinBrig = 16.50
+Filter_MaxBrig = 21.00
+Filter_MaxSeeing= 1.5
+
+#   Default max airmass adjusted seeing if specific filter not provided
+#       Units: arcseconds  Format: float   Default: none
+MaxSeeing    = 1.5
+                                                                                             
+#   Minimum Cloud Transparency of allowable observations
+#       Units = range 0:1; Format = float; Default is .9, Hardcoded limit =.9
+minTransparency = .7
+                                                                                             
+#   Exposure time in seconds per visit
+#       Default  = 30.
+ExposureTime = 34.0      # 2 15-secs. exposures, 1 2-secs. readout, 2-secs. shutter time
+#ExposureTime = 570.     # composite region for 19 fov hexagons
+                                                                                             
+#   Boundary when TwilightObserving begins/ends
+#       Units = degrees Format = float; Default is -12. = nautical
+TwilightBoundary = -12.
+                                                                                             
+# -----------------------------------------------------------------------
+#                   Target Ranking Parameters
+# -----------------------------------------------------------------------
+#   Relative priority parameter for the proposal.
+#       This factor is applied in the final rank for all the observations
+#       proposed by this proposal. Default = 1.0
+RelativeProposalPriority = 1.1
+                                                                                             
+#   Proximity bonus factor that is added internally in the proposal
+#       to select the observations to propose promoting the closest to the
+#       current telescope position.
+#       However, the scheduler then replaces this bonus by the more accurate
+#       slew time prediction.
+MaxProximityBonus = 0.1
+                                                                                             
+#   Ranking values
+#
+#   Maximum rank scale for the time window
+#       No default.
+RankTimeMax = 5.00
+                                                                                          
+#   Rank for an idle sequence (not started yet)
+#   or average rank for no timewindow (distribution WLtype)
+#       No default.
+RankIdleSeq = 0.10
+
+#   Maximum rank bonus for sequence that has exhausted allowable misses.
+#       No default.
+RankLossRiskMax = 0.0
+                                                                                          
+# Disabled values, formula still on development.
+RankDaysLeftMax = 0.0
+DaysLeftToStartBoost = 0                                                    
+
+# Accept observations with low ranking in this proposal
+# that have been observed for other proposals?
+AcceptSerendipity = False
+
+# Accept consecutive observations for the same field
+AcceptConsecutiveObs = False
+
+# Set start and stop time if proposal should not run for the entire simulation
+# duration (secs since start of simulation).
+#StartTime = 365
+#StopTime = 730
+
