Remove acceptSerendipity from EclipticBand, try to make it stop skipping galactic plane

--- a/survey/EclipticBand.conf
+++ b/survey/EclipticBand.conf
@@ -1,7 +1,6 @@
 # Universal proposal in the ecliptic to get NEO fields.
 
 WLtype = True
-ScienceType = WFD
 
 # -----------------------------------------------------------------------
 #                   Event Sequencing Parameters
@@ -18,7 +17,7 @@ MaxNumberActiveSequences = 10000
                                                                                           
 #   Indicates incomplete sequences may be restarted if terminated early.
 #       Default = False
-RestartLostSequences = False
+RestartLostSequences = True
                                                                                           
 #   Indicates successfully completed sequences may be restarted on completion.
 #       Default = False
@@ -256,7 +255,7 @@ DaysLeftToStartBoost = 0
 
 # Accept observations with low ranking in this proposal
 # that have been observed for other proposals?
-AcceptSerendipity = True
+AcceptSerendipity = False
 
 # Accept consecutive observations for the same field
 AcceptConsecutiveObs = False
