Updating config files and readme

--- a/survey/NorthEclipticSpur.conf
+++ b/survey/NorthEclipticSpur.conf
@@ -18,7 +18,7 @@ MaxNumberActiveSequences = 10000
                                                                                           
 #   Indicates incomplete sequences may be restarted if terminated early.
 #       Default = False
-RestartLostSequences = False
+RestartLostSequences = True
                                                                                           
 #   Indicates successfully completed sequences may be restarted on completion.
 #       Default = False
@@ -58,38 +58,38 @@ RestartCompleteSequences = True
                                                                                                           
 SubSeqName      = g
 SubSeqFilters   = g
-SubSeqExposures = 2
-SubSeqEvents 	= 136
+SubSeqExposures = 1
+SubSeqEvents 	= 157
 SubSeqMaxMissed = 0
 SubSeqInterval  = 30*60
 SubSeqWindowStart       = -0.5
 SubSeqWindowMax         =  0.5
 SubSeqWindowEnd         =  1.0
 
-SubSeqName      = r
-SubSeqFilters   = r
-SubSeqExposures = 2
-SubSeqEvents	= 314
-SubSeqMaxMissed = 0
-SubSeqInterval  = 30*60
-SubSeqWindowStart       = -0.5
-SubSeqWindowMax         =  0.5
-SubSeqWindowEnd         =  1.0
+#SubSeqName      = r
+#SubSeqFilters   = r
+#SubSeqExposures = 2
+#SubSeqEvents	= 360
+#SubSeqMaxMissed = 0
+#SubSeqInterval  = 30*60
+#SubSeqWindowStart       = -0.5
+#SubSeqWindowMax         =  0.5
+#SubSeqWindowEnd         =  1.0
 
-SubSeqName      = i
-SubSeqFilters   = i
-SubSeqExposures = 2
-SubSeqEvents	= 314
-SubSeqMaxMissed = 0
-SubSeqInterval  = 30*60
-SubSeqWindowStart       = -0.5
-SubSeqWindowMax         =  0.5
-SubSeqWindowEnd         =  1.0
+#SubSeqName      = i
+#SubSeqFilters   = i
+#SubSeqExposures = 2
+#SubSeqEvents	= 360
+#SubSeqMaxMissed = 0
+#SubSeqInterval  = 30*60
+#SubSeqWindowStart       = -0.5
+#SubSeqWindowMax         =  0.5
+#SubSeqWindowEnd         =  1.0
                                                                                                       
 SubSeqName      = z
 SubSeqFilters   = z
-SubSeqExposures = 2
-SubSeqEvents	= 273
+SubSeqExposures = 1
+SubSeqEvents	= 315
 SubSeqMaxMissed = 0
 SubSeqInterval  = 30*60
 SubSeqWindowStart       = -0.5
@@ -134,8 +134,8 @@ MaxBoostToComplete   = 10.00
 #       defaults: +/- 25. deg in latitude at 0 deg longitude going to
 #               +/- 5. deg in latitude at 180. deg longitude.
 #       Units = degree; Format = float; Default: taperL=5, taperB=180 peakL=25
-taperL = 0.1
-taperB = 90.
+taperL = 0.
+taperB = 0.
 peakL = 10.
                                                                                              
 #   During night potentially visible fields are bracketted by region:
@@ -228,7 +228,7 @@ TwilightBoundary = -12.
 #   Relative priority parameter for the proposal.
 #       This factor is applied in the final rank for all the observations
 #       proposed by this proposal. Default = 1.0
-RelativeProposalPriority = 0.5
+RelativeProposalPriority = 1.1
                                                                                              
 #   Proximity bonus factor that is added internally in the proposal
 #       to select the observations to propose promoting the closest to the
