Removed unused proposals, updated user regions in EB and Universal.

--- a/survey/EclipticBand.conf
+++ b/survey/EclipticBand.conf
@@ -1,6 +1,7 @@
 # Universal proposal in the ecliptic to get NEO fields.
 
 WLtype = True
+ScienceType = WFD
 
 # -----------------------------------------------------------------------
 #                   Event Sequencing Parameters
@@ -54,15 +55,15 @@ RestartCompleteSequences = True
 #SubSeqWindowMax         = 0
 #SubSeqWindowEnd         = 0
                                                                                                           
-#SubSeqName      = g
-#SubSeqFilters   = g
-#SubSeqExposures = 2
-#SubSeqEvents     = 157
-#SubSeqMaxMissed = 0
-#SubSeqInterval  = 30*60
-#SubSeqWindowStart       = -0.5
-#SubSeqWindowMax         =  0.5
-#SubSeqWindowEnd         =  1.0
+SubSeqName      = g
+SubSeqFilters   = g
+SubSeqExposures = 2
+SubSeqEvents     = 157
+SubSeqMaxMissed = 0
+SubSeqInterval  = 30*60
+SubSeqWindowStart       = -0.5
+SubSeqWindowMax         =  0.5
+SubSeqWindowEnd         =  1.0
 
 SubSeqName      = r
 SubSeqFilters   = r
@@ -185,12 +186,12 @@ Filter_MaxSeeing= 2.0
 Filter = r
 Filter_MinBrig = 16.00
 Filter_MaxBrig = 30.00
-Filter_MaxSeeing= 2.0
+Filter_MaxSeeing= 2.2
 
 Filter = i
 Filter_MinBrig = 16.00
 Filter_MaxBrig = 30.00
-Filter_MaxSeeing= 2.0
+Filter_MaxSeeing= 2.5
 
 Filter = z
 Filter_MinBrig = 16.00
@@ -204,7 +205,7 @@ Filter_MaxSeeing= 1.5
 
 #   Default max airmass adjusted seeing if specific filter not provided
 #       Units: arcseconds  Format: float   Default: none
-MaxSeeing    = 1.5
+MaxSeeing    = 2.5
 
 #   Minimum Cloud Transparency of allowable observations
 #       Units = range 0:1; Format = float; Default is .9, Hardcoded limit =.9
@@ -1025,8 +1026,6 @@ userRegion = 356.81,2.69,0.03
 userRegion = 3.19,2.69,0.03
 userRegion = 140.81,2.69,0.03
 userRegion = 137.64,2.84,0.03
-userRegion = 78.36,2.84,0.03
-userRegion = 65.64,2.84,0.03
 userRegion = 353.64,2.84,0.03
 userRegion = 6.36,2.84,0.03
 userRegion = 209.64,2.84,0.03
@@ -1035,14 +1034,10 @@ userRegion = 350.48,3.06,0.03
 userRegion = 9.52,3.06,0.03
 userRegion = 206.48,3.06,0.03
 userRegion = 153.52,3.06,0.03
-userRegion = 81.52,3.06,0.03
-userRegion = 62.48,3.06,0.03
 userRegion = 134.48,3.06,0.03
 userRegion = 131.35,3.32,0.03
-userRegion = 59.35,3.32,0.03
 userRegion = 347.35,3.32,0.03
 userRegion = 12.65,3.32,0.03
-userRegion = 84.65,3.32,0.03
 userRegion = 203.35,3.32,0.03
 userRegion = 156.65,3.32,0.03
 userRegion = 128.23,3.60,0.03
@@ -1050,69 +1045,48 @@ userRegion = 200.23,3.60,0.03
 userRegion = 159.77,3.60,0.03
 userRegion = 344.23,3.60,0.03
 userRegion = 15.77,3.60,0.03
-userRegion = 56.23,3.60,0.03
-userRegion = 87.77,3.60,0.03
 userRegion = 53.11,3.86,0.03
 userRegion = 341.11,3.86,0.03
 userRegion = 18.89,3.86,0.03
-userRegion = 125.11,3.86,0.03
 userRegion = 197.11,3.86,0.03
 userRegion = 162.89,3.86,0.03
-userRegion = 90.89,3.86,0.03
-userRegion = 94.00,4.13,0.03
 userRegion = 194.00,4.13,0.03
 userRegion = 166.00,4.13,0.03
 userRegion = 50.00,4.13,0.03
-userRegion = 122.00,4.13,0.03
 userRegion = 338.00,4.13,0.03
 userRegion = 22.00,4.13,0.03
-userRegion = 118.90,4.37,0.03
 userRegion = 46.90,4.37,0.03
 userRegion = 334.90,4.37,0.03
 userRegion = 25.10,4.37,0.03
 userRegion = 190.90,4.37,0.03
 userRegion = 169.10,4.37,0.03
-userRegion = 97.10,4.37,0.03
-userRegion = 100.21,4.58,0.03
-userRegion = 115.79,4.58,0.03
 userRegion = 28.21,4.58,0.03
 userRegion = 187.79,4.58,0.03
 userRegion = 172.21,4.58,0.03
 userRegion = 43.79,4.58,0.03
 userRegion = 31.32,4.73,0.03
-userRegion = 112.68,4.73,0.03
 userRegion = 40.68,4.73,0.03
-userRegion = 103.32,4.73,0.03
 userRegion = 184.68,4.73,0.03
 userRegion = 175.32,4.73,0.03
 userRegion = 181.56,4.81,0.03
 userRegion = 178.44,4.81,0.03
-userRegion = 109.56,4.81,0.03
 userRegion = 37.56,4.81,0.03
 userRegion = 34.44,4.81,0.03
-userRegion = 106.44,4.81,0.03
 userRegion = 142.39,5.09,0.03
-userRegion = 73.61,5.09,0.03
 userRegion = 145.61,5.09,0.03
-userRegion = 70.39,5.09,0.03
 userRegion = 358.39,5.09,0.03
 userRegion = 1.61,5.09,0.03
 userRegion = 139.19,5.21,0.03
 userRegion = 148.81,5.21,0.03
-userRegion = 76.81,5.21,0.03
-userRegion = 67.19,5.21,0.03
 userRegion = 355.19,5.21,0.03
 userRegion = 4.81,5.21,0.03
 userRegion = 136.01,5.42,0.03
-userRegion = 64.01,5.42,0.03
 userRegion = 151.99,5.42,0.03
 userRegion = 352.01,5.42,0.03
 userRegion = 7.99,5.42,0.03
-userRegion = 79.99,5.42,0.03
 userRegion = 204.85,5.69,0.03
 userRegion = 155.15,5.69,0.03
 userRegion = 60.85,5.69,0.03
-userRegion = 83.15,5.69,0.03
 userRegion = 132.85,5.69,0.03
 userRegion = 348.85,5.69,0.03
 userRegion = 11.15,5.69,0.03
@@ -1122,15 +1096,12 @@ userRegion = 201.71,5.98,0.03
 userRegion = 158.29,5.98,0.03
 userRegion = 129.71,5.98,0.03
 userRegion = 57.71,5.98,0.03
-userRegion = 86.29,5.98,0.03
 userRegion = 126.59,6.26,0.03
 userRegion = 342.59,6.26,0.03
 userRegion = 17.41,6.26,0.03
 userRegion = 198.59,6.26,0.03
 userRegion = 161.41,6.26,0.03
-userRegion = 89.41,6.26,0.03
 userRegion = 54.59,6.26,0.03
-userRegion = 92.53,6.54,0.03
 userRegion = 123.47,6.54,0.03
 userRegion = 195.47,6.54,0.03
 userRegion = 164.53,6.54,0.03
@@ -1142,15 +1113,12 @@ userRegion = 167.62,6.80,0.03
 userRegion = 120.38,6.80,0.03
 userRegion = 23.62,6.80,0.03
 userRegion = 48.38,6.80,0.03
-userRegion = 95.62,6.80,0.03
 userRegion = 117.28,7.03,0.03
 userRegion = 26.72,7.03,0.03
-userRegion = 98.72,7.03,0.03
 userRegion = 189.28,7.03,0.03
 userRegion = 170.72,7.03,0.03
 userRegion = 45.28,7.03,0.03
 userRegion = 42.19,7.21,0.03
-userRegion = 101.81,7.21,0.03
 userRegion = 29.81,7.21,0.03
 userRegion = 186.19,7.21,0.03
 userRegion = 173.81,7.21,0.03
@@ -1159,7 +1127,6 @@ userRegion = 183.10,7.32,0.03
 userRegion = 176.90,7.32,0.03
 userRegion = 111.10,7.32,0.03
 userRegion = 39.10,7.32,0.03
-userRegion = 104.90,7.32,0.03
 userRegion = 32.90,7.32,0.03
 userRegion = 36.00,7.36,0.03
 userRegion = 180.00,7.36,0.03
@@ -1167,7 +1134,6 @@ userRegion = 108.00,7.36,0.03
 userRegion = 144.00,7.50,0.03
 userRegion = 72.00,7.50,0.03
 userRegion = 0.00,7.50,0.03
-userRegion = 75.24,7.57,0.03
 userRegion = 140.76,7.57,0.03
 userRegion = 68.76,7.57,0.03
 userRegion = 356.76,7.57,0.03
@@ -1178,9 +1144,7 @@ userRegion = 150.45,7.77,0.03
 userRegion = 65.55,7.77,0.03
 userRegion = 353.55,7.77,0.03
 userRegion = 6.45,7.77,0.03
-userRegion = 78.45,7.77,0.03
 userRegion = 134.36,8.05,0.03
-userRegion = 81.64,8.05,0.03
 userRegion = 153.64,8.05,0.03
 userRegion = 62.36,8.05,0.03
 userRegion = 350.36,8.05,0.03
@@ -1693,4 +1657,3 @@ userRegion = 109.77,37.27,0.03
 userRegion = 72.00,37.35,0.03
 userRegion = 82.54,37.71,0.03
 userRegion = 86.09,38.36,0.03
-
