Trying to make different exposure times per proposal, and no subsequences in EB.

--- a/survey/LSST.conf
+++ b/survey/LSST.conf
@@ -53,14 +53,14 @@ siteConf = system/SiteCP.conf
 
 #        Weak Lensing Proposal configuration file
 #        If missing, then do not process Weak Lensing proposal
-weakLensConf = survey/GalacticPlaneProp.conf
-weakLensConf = survey/SouthCelestialPole.conf
+#weakLensConf = survey/GalacticPlaneProp.conf
+#weakLensConf = survey/SouthCelestialPole.conf
 
 #        New Weak Lensing as Transient with subsequences for each filter.
 WLpropConf = survey/Universal.conf
-WLpropConf = survey/NorthEclipticSpur.conf
+#WLpropConf = survey/NorthEclipticSpur.conf
 WLpropConf = survey/EclipticBand.conf
-WLpropConf = survey/DDcosmology.conf
+#WLpropConf = survey/DDcosmology.conf
 
 #       Instrument configuration file
 instrumentConf = system/Instrument.conf
